fixed jumping pics..

--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -71,7 +71,7 @@
 }
 #slider .slides {
 	display: block;
-	width: 3200px;
+	width: 3840px;
 	height: 480px;
 	margin: 0;
 	padding: 0;
